--- a/iron_mq_dotnet/iron_mq_dotnet.csproj
+++ b/iron_mq_dotnet/iron_mq_dotnet.csproj
@@ -8,8 +8,8 @@
     <ProjectGuid>{8C9AD9D1-225D-4586-8D0B-B9B854ECE88B}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>io.iron.ironmq</RootNamespace>
-    <AssemblyName>iron_mq_dotnet</AssemblyName>
+    <RootNamespace>IronMQ</RootNamespace>
+    <AssemblyName>IronMQ.NET</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <SolutionDir Condition="$(SolutionDir) == '' Or $(SolutionDir) == '*Undefined*'">..\</SolutionDir>
