--- a/iron_mq_dotnet/iron_mq_dotnet.nuspec
+++ b/iron_mq_dotnet/iron_mq_dotnet.nuspec
@@ -4,7 +4,7 @@
     <id>IronMQ.NET</id>
     <version>$version$</version>
     <title>IronMQ.NET</title>
-    <authors>coreyauger odeits friism develop7 treeder Eskat0n</authors>
+    <authors>coreyauger, odeits, friism, develop7, treeder, Eskat0n</authors>
     <owners>Eskat0n</owners>
     <licenseUrl>http://www.opensource.org/licenses/mit-license.php</licenseUrl>
     <projectUrl>http://www.iron.io</projectUrl>
