--- a/sources/IronMQ.NET/IronMQ.NET.csproj
+++ b/sources/IronMQ.NET/IronMQ.NET.csproj
@@ -58,9 +58,7 @@
     <None Include="IronMQ.NET.nuspec" />
     <None Include="packages.config" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Extensions\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\nuget.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
