--- a/sources/IronMQ.NET/IronMQ.NET.csproj
+++ b/sources/IronMQ.NET/IronMQ.NET.csproj
@@ -46,11 +46,15 @@
     <Compile Include="Data\Error.cs" />
     <Compile Include="Data\QueueMessages.cs" />
     <Compile Include="Data\Message.cs" />
+    <Compile Include="IClient.cs" />
+    <Compile Include="IQueue.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Queue.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="IronMQ.NET.nuspec" />
+    <None Include="IronMQ.NET.nuspec">
+      <SubType>Designer</SubType>
+    </None>
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup />
